title spacing issue in woo carousel

--- a/assets/reactjs/src/blocks/woocarousel/style.scss
+++ b/assets/reactjs/src/blocks/woocarousel/style.scss
@@ -10,6 +10,9 @@
       .qubely-product-info {
         text-align: initial;
         display: inline-block;
+        .qubely-product-name {
+          display: inline-block;
+        }
       }
     }
   }
